# Hackathon-II-Todo-app

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
history/prompts/001-todo-core-features/: 0001-phase-i-specification-creation.spec.prompt.md  0002-phase-i-implementation-planning.plan.prompt.md  0003-phase-i-task-generation.tasks.prompt.md  0004-enhance-cli-app-with-ui-ux-improvements-and-bug-fix.feature.prompt.md
history/prompts/constitution/: 0001-initial-constitution-creation.constitution.prompt.md  0002-constitution-amendment-abstraction.constitution.prompt.md
specs/001-todo-core-features/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-todo-core-features/checklists/: requirements.md
src/: data.py  todo.py
tests/: test_todo.py
